PROJECT(cstrobe)

CMAKE_MINIMUM_REQUIRED(VERSION 3.14)

INCLUDE_DIRECTORIES(src)
INCLUDE_DIRECTORIES($ENV{CHEST_SYSROOT}/include)
LINK_DIRECTORIES($ENV{CHEST_SYSROOT}/lib)

SET(SRC_LISTS
    src/strobe.cpp
)

ADD_LIBRARY(${PROJECT_NAME} STATIC ${SRC_LISTS})

ADD_EXECUTABLE(test_cstrobe test/test_cstrobe.cpp)
TARGET_LINK_LIBRARIES(test_cstrobe ${PROJECT_NAME} ckeccpp)

install(DIRECTORY src/ DESTINATION $ENV{CHEST_SYSROOT}/include/${PROJECT_NAME}
    FILES_MATCHING PATTERN "*.h")
    
install(TARGETS ${PROJECT_NAME}
    DESTINATION $ENV{CHEST_SYSROOT}/lib)